Refactor custom messages and user interface handling in robot software
- Removed obsolete `RobotStateMsg` and `SensorMsg` message definitions to streamline message handling.
- Introduced `ToUiMsg` for improved user interaction data communication.
- Updated `UserInterfaceNode` to utilize `KeyboardCmdHandler` and `UserDataHandler` for enhanced keyboard input processing and user data management.
- Integrated TBB for improved parallel processing capabilities in the robot software.
- Refactored `CMakeLists.txt` and `package.xml` to reflect the removal of old messages and addition of new dependencies.
- Enhanced logging in `RobotFSMNode` for better debugging and state tracking.

--- a/src/custom_msgs/CMakeLists.txt
+++ b/src/custom_msgs/CMakeLists.txt
@@ -17,9 +17,8 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
         "msg/MujocoMsg.msg"
-        "msg/SensorMsg.msg"
         "msg/ActuatorCmds.msg"
-        "msg/RobotStateMsg.msg"
+        "msg/ToUiMsg.msg"
         DEPENDENCIES std_msgs sensor_msgs geometry_msgs
 )
 if (BUILD_TESTING)
