--- a/src/robot_software/package.xml
+++ b/src/robot_software/package.xml
@@ -16,6 +16,7 @@
     <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
     <depend>message_filters</depend>
+    <depend>tbb</depend>
     <!--    <depend>pinocchio</depend>-->
 
     <test_depend>ament_lint_auto</test_depend>
