--- a/src/robot_software/CMakeLists.txt
+++ b/src/robot_software/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(std_msgs REQUIRED)
 find_package(pinocchio REQUIRED)
 find_package(message_filters REQUIRED)
 find_package(TBB REQUIRED)
+# find_package(Eigen3 3.4 REQUIRED NO_MOUDLE)
 
 file(GLOB_RECURSE source
         ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
@@ -41,8 +42,14 @@ file(GLOB_RECURSE source
         ${CMAKE_CURRENT_SOURCE_DIR}/src/robot_utils/*.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/robot_interface/*.cpp
 )
+aux_source_directory(${CMAKE_SOURCE_DIR}/include/robot_software/third_party/quadprog Quadprog_SRC)
 
-add_executable(main_app ${source})
+
+# add_subdirectory(${CMAKE_SOURCE_DIR}/include/robot_software/third_party/ungar)
+
+
+# add main_app
+add_executable(main_app ${source} ${Quadprog_SRC})
 target_compile_features(main_app PUBLIC cxx_std_20)  # 确保使用 C++20 特性
 
 set_target_properties(main_app PROPERTIES
@@ -67,7 +74,9 @@ ament_target_dependencies(main_app
 
 target_link_libraries(main_app
         pinocchio::pinocchio
-        TBB::tbb)
+        TBB::tbb
+        # ungar::ungar
+        )
 
 #add_library(lib_cpp20 SHARED src/cpp20_code.cpp) #!!!
 #target_compile_features(lib_cpp20 PRIVATE cxx_std_20) #!!!
