--- a/src/robot_software/package.xml
+++ b/src/robot_software/package.xml
@@ -19,6 +19,9 @@
     <depend>tbb</depend>
     <depend>rosbag2_cpp</depend>
     <depend>rosbag2_storage</depend>
+    <depend>tf2</depend>
+    <depend>tf2_ros</depend>
+    <depend>tf2_geometry_msgs</depend>
     <!--    <depend>pinocchio</depend>-->
 
     <test_depend>ament_lint_auto</test_depend>
